--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
 
-<h1>About</h1>
+<h1>Hi There! I'm Praveen &#x1F44B; &#x1F44B; </h1>
 
 <p>
-Console is a minimal, responsive and light theme for Hugo inspired by Linux console.  <a href="about/">(more)</a>
+I'm a DevOps Engineer. Driven by all the things cloud, web, distributed systems. <a href="about/">(More..)</a>
 </p>
 <br/>
 
-<h1>Latest posts</h1>
+<h1>Crafts:</h1>
 
 <div class="posts-list">
 {{ with .Site.GetPage "/posts" }}
@@ -23,7 +23,7 @@ Console is a minimal, responsive and light theme for Hugo inspired by Linux cons
 {{ end }}
 </div>
 
-<h1>Latest photos</h1>
+<h1>Where to find me:</h1>
 
 <div class="image-grid">
 {{ with .Site.GetPage "/photos" }}
