Start to populate with info.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,41 +2,30 @@
 
 <h1>Hi There! I'm Praveen &#x1F44B; &#x1F44B; </h1>
 
-<p>
-I'm a DevOps Engineer. Driven by all the things cloud, web, distributed systems. <a href="about/">(More..)</a>
-</p>
-<br/>
-
+<div class="flexicontainer">
+    <div class="container-child">
+        <p>I'm a DevOps Engineer. Driven by all the things cloud, web, distributed systems. <a href="about/">(More..)</a></p>
+    </div>
+    <div class="container-child">
+        <p>Image</p>
+    </div>
+</div>
 <h1>Crafts:</h1>
-
-<div class="posts-list">
-{{ with .Site.GetPage "/posts" }}
-    {{ range first 3 (sort .Data.Pages "Date" "desc" (where .Pages ".Params.private" "!=" true))}}
-        <div class="post">
-            <p>
-                <div class="date">{{ .PublishDate.Format "Jan. 2, 2006" }}</div>
-                <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
-                {{ .Summary }}
-            </p>
-        </div>    
-    {{ end }}
-{{ end }}
-</div>
-
-<h1>Where to find me:</h1>
-
+<ul>
+    <li>Development && Scripting => Ruby, Python, JS, Bash</li>
+    <li>Docker-fu</li>
+    <li>CaC - Puppet, Ansible</li>
+    <li>IaC - Terraform</li>
+    <li>CI/CD Methods</li>
+</ul>
 <div class="image-grid">
-{{ with .Site.GetPage "/photos" }}
-    {{ range first 3 (sort .Data.Pages "Date" "desc")}}
-        <a href="{{ .Permalink }}" title="{{ .Title }}">
-        {{ $image := .Page.Resources.GetMatch .Params.image }}
-        {{ with $image }}
-            {{ $thumb := .Resize "400x" }}
-            <img src="{{ $thumb.RelPermalink }}" alt="{{ .Title }}" class="img-responsive">
-        {{end}}
-        </a>
-    {{ end }}
-{{ end }}
 </div>
+<h1>Where to find me:</h1>
+<ul>
+    <li><a href="https://github.com/PraveenMut" target="_blank">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/praveenmut/" target="_blank">LinkedIn</a></li>
+    <li><a href="https://twitter.com/PraveenMut" target="_blank">Twitter</a></li>
+</ul>
+
 
 {{ end }}
