Add in CSS properties for containers and add image in.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,12 +2,12 @@
 
 <h1>Hi There! I'm Praveen &#x1F44B; &#x1F44B; </h1>
 
-<div class="flexicontainer">
+<div class="flexbox-container">
     <div class="container-child">
         <p>I'm a DevOps Engineer. Driven by all the things cloud, web, distributed systems. <a href="about/">(More..)</a></p>
     </div>
     <div class="container-child">
-        <p>Image</p>
+        <img src="{{ "images/headshot.png" | absURL }}">
     </div>
 </div>
 <h1>Crafts:</h1>
