Add in additional information in the crafts section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,9 +14,9 @@
 <ul>
     <li>Development && Scripting => Ruby, Python, JS, Bash</li>
     <li>Docker-fu</li>
-    <li>CaC - Puppet, Ansible</li>
-    <li>IaC - Terraform</li>
-    <li>CI/CD Methods</li>
+    <li>Configuration Management => Puppet, Ansible</li>
+    <li>Infra as Code => Terraform</li>
+    <li>CI/CD</li>
 </ul>
 <div class="image-grid">
 </div>
