center the image on the cross (aka y) axis

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,27 +5,24 @@
 <div class="flexbox-container">
     <div class="container-child">
         <p>I'm a DevOps Engineer. Driven by all the things cloud, web, distributed systems. <a href="about/">(More..)</a></p>
+        <h1>Crafts:</h1>
+        <ul>
+            <li>Development && Scripting => Ruby, Python, JS, Bash</li>
+            <li>Docker-fu</li>
+            <li>Configuration Management => Puppet, Ansible</li>
+            <li>Infra as Code => Terraform</li>
+            <li>CI/CD</li>
+        </ul>
+        <h1>Where to find me:</h1>
+        <ul>
+            <li><a href="https://github.com/PraveenMut" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/praveenmut/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://twitter.com/PraveenMut" target="_blank">Twitter</a></li>
+        </ul>
     </div>
-    <div class="container-child">
-        <img src="{{ "images/headshot.png" | absURL }}">
-    </div>
+<div id="front-image" class="container-child">
+    <img src="{{ "images/headshot.png" | absURL }}">
 </div>
-<h1>Crafts:</h1>
-<ul>
-    <li>Development && Scripting => Ruby, Python, JS, Bash</li>
-    <li>Docker-fu</li>
-    <li>Configuration Management => Puppet, Ansible</li>
-    <li>Infra as Code => Terraform</li>
-    <li>CI/CD</li>
-</ul>
-<div class="image-grid">
 </div>
-<h1>Where to find me:</h1>
-<ul>
-    <li><a href="https://github.com/PraveenMut" target="_blank">GitHub</a></li>
-    <li><a href="https://www.linkedin.com/in/praveenmut/" target="_blank">LinkedIn</a></li>
-    <li><a href="https://twitter.com/PraveenMut" target="_blank">Twitter</a></li>
-</ul>
-
 
 {{ end }}
