Drop contact link. Add in contact section.
There's no real point in having a contact form that could possibly be a target for attacks.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,6 +19,8 @@
             <li><a href="https://www.linkedin.com/in/praveenmut/" target="_blank">LinkedIn</a></li>
             <li><a href="https://twitter.com/PraveenMut" target="_blank">Twitter</a></li>
         </ul>
+        <h1>Contact:</h1>
+        <p>Send me a message through LinkedIn or Twitter. :)</p>
     </div>
 <div id="front-image" class="container-child">
     <img src="{{ "images/headshot.png" | absURL }}">
