--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li>Development && Scripting => Ruby, Python, JS, Bash</li>
             <li>Docker-fu</li>
-            <li>Configuration Management => Puppet, Ansible</li>
+            <li>Configuration Management => Puppet & Ansible</li>
             <li>Infra as Code => Terraform</li>
             <li>CI/CD</li>
         </ul>
